Improved navbar on mobile devices and fixed margin bug

--- a/style.scss
+++ b/style.scss
@@ -16,6 +16,10 @@
    padding: 3% 0;
 }
 
+.navbar-nav {
+   margin-top: 3px;
+}
+
 .nav-link {
    text-transform: uppercase;
    font-size: 0.8em;
